force-app/main/default/objects/NewsletterSubscriber__c/NewsletterSubscriber__c.object-meta.xml
<CustomObject>
    <label>Newsletter Subscriber</label>
    <nameField>
        <displayFormat>SUB-{0000}</displayFormat>
        <label>Subscriber Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Newsletter Subscribers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>