force-app/main/default/objects/NewsletterSubscriber__c/fields/SubscribedAt__c.field-meta.xml
<CustomField>
    <fullName>SubscribedAt__c</fullName>
    <label>Subscribed At</label>
    <type>DateTime</type>
</CustomField>