force-app/main/default/objects/NewsletterSubscriber__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <label>Unsubscribe Token</label>
    <type>Text</type>
    <length>64</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>